converting GP stroke to curve doesn't immediately work #59861

Closed
opened 2018-12-26 07:39:08 +01:00 by heini · 6 comments

Operating system: Win 10 64bit
Graphics card: Geforce 940M

Broken:
2.80, 60b930af3e win64, blender2.8, 2018-12-16

Short description of error
converting a GP object to a curve gives an empty curve as a results. Points only appear after clicking around in the bottom left popup

Exact steps for others to reproduce the error
create a GP object and draw something
in object mode convert object to curve/path..
an empty curve object is then generated
click on one of the options (link stroke/ normalize weight)
points will appear in the curve as they are supposed to

Operating system: Win 10 64bit Graphics card: Geforce 940M Broken: 2.80, 60b930af3e73 win64, blender2.8, 2018-12-16 **Short description of error** converting a GP object to a curve gives an empty curve as a results. Points only appear after clicking around in the bottom left popup **Exact steps for others to reproduce the error** create a GP object and draw something in object mode convert object to curve/path.. an empty curve object is then generated click on one of the options (link stroke/ normalize weight) points will appear in the curve as they are supposed to
Author

Added subscriber: @heini

Added subscriber: @heini

Added subscribers: @lichtwerk, @antoniov

Added subscribers: @lichtwerk, @antoniov

@lichtwerk Could you take a look on this? I have tested and the problem must be in some depsgraph missing updates, but I don't know enough about this to fix it.

Operator is GPENCIL_OT_convert.

@lichtwerk Could you take a look on this? I have tested and the problem must be in some depsgraph missing updates, but I don't know enough about this to fix it. Operator is GPENCIL_OT_convert.
Philipp Oeser self-assigned this 2018-12-27 10:11:37 +01:00
Member

@antoniov: checking...

@antoniov: checking...

This issue was referenced by 21e4f3bd8c

This issue was referenced by 21e4f3bd8c3b797d6b51cafbfb33e2bed9f42269
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59861
No description provided.