Fix T59861: converting GP stroke to curve doesn't immediately work

Reviewers: antoniov, brecht

Maniphest Tasks: T59861

Differential Revision: https://developer.blender.org/D4127